--- a/src/components/Friends.css
+++ b/src/components/Friends.css
@@ -11,29 +11,36 @@
 
 .nav-bar {
   background-color: white;
-  padding: 10px ;
+  padding: 0 10px; /* Adds padding above and below the nav-bar */
+  border: 2px solid #333; /* Adds a solid outline around the nav-bar */
+  border-radius: 8px; /* Optional: Adds rounded corners */
+  margin-bottom: 20px; /* Optional: Space below the nav-bar */
+
  
 }
 .nav-list {
-  list-style: none;
-  display: flex; /* Flexbox to display items side by side */
-  justify-content: center;
-  margin: 0;
+  list-style-type: none;
   padding: 0;
+  display: flex;
+  justify-content: space-around; 
+  margin-bottom: 20px; /* Add margin to the bottom of the nav bar */
 }
 
 
 .nav-item {
-  margin: 120px; /* Adds space between each link */
+  margin: 10px; /* Adds space between each link */
   /* color: white; */
-  font-size: 16px;
+  font-size: 15px;
   cursor: pointer;
   text-decoration: none;
   transition: color 0.3s ease;
+  /* text-align: center; */
+ 
  
 }
 .nav-list li {
   position: relative;
+  padding: 0 100px; 
 }
  .nav-list li:not(:last-child)::after {
   content: "";
@@ -42,4 +49,5 @@
   top: 0;
   height: 100%;
   border-right: 1px solid black; /* Adjust color and style as needed */
+ 
 }
